--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.65"
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
+        "symfony/maker-bundle": "^1.65",
+        "zenstruck/foundry": "^2.8"
     }
 }
