--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
